# Bosodo-KI-Game-Balancing

./: .dockerignore  .gitignore  Anleitung.md  CLAUDE_CODE_PROMPT.md  Dockerfile  README.md  balancing-pipeline-prompt.md  balancing_report.json  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
agents/: __init__.py
anleitungen/: Anleitung-GPU-Server.md  Anleitung-Neuer-Container.md  Anleitung.md  balancing_pipeline.md  llm_cache_erzeugen.md
bosodo_env/: __init__.py  balancing.py  card_loader.py  env.py  game_state.py  metrics.py  rewards.py
config/: training_config.yaml
data/: monster_karten.json  spielregeln.json  wissens_karten.json
data/scrum_edition/: llm_cache.json  monster_karten.json  wissens_karten.json
data/teen_edition/: llm_cache.json
llm_experts/: analyse_llmCache.py  balancing_pipeline.py  batch_evaluate.py  cache.py  scorer.py
reports/: generate_report.py
scripts/: analyze.py  iterative_balance.py  run_balancing_pipeline.py  simulate.py  train.py
tests/: test_environment.py
todo/: bosodo_balancing_bericht.md  fortschritt.md  fortschritt_iterative_llm_balancing.md
