[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bosodo-balancing"
version = "0.1.0"
description = "KI-gestütztes Balancing für das BOSODO Lernkartenspiel via Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "HS Ansbach — KI-Balancing Projekt", email = "projekt@hs-ansbach.de"}
]

dependencies = [
    "stable-baselines3[extra]>=2.3.0",
    "gymnasium>=1.0.0",
    "numpy>=1.24.0",
    "torch>=2.2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "tensorboard>=2.15.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
